<resources>
    <string name="app_name">Home Service</string>
    <string name="first_name" translatable="false">First name</string>
    <string name="second_name" translatable="false">Second name</string>
    <string name="email" translatable="false">email</string>
    <string name="sign_up" translatable="false">SIGN UP</string>
    <!-- Strings used for fragments for navigation -->


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="kichwa">What service are you looking for ?</string>
    <string name="todo">TODO</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account" />
    <string name="loginwords">Login to your account</string>
    <string name="floataccount">Account</string>
    <string name="floathome">Home</string>
    <string name="floatsetting">Setting</string>
    <string name="no_account">Not have account?<b>SignUp</b></string>
    <string name="floatdash">Dashboard</string>
    <string name="loginBt">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="Password_fill">Password</string>
    <string name="scrol">scroll</string>
    <string name="hire">Hire</string>
    <string name="scroll">scroll</string>
    <string name="fnameReg">First name</string>
    <string name="snameReg">Second name</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="confirm_passwordReg">Confirm password</string>
    <string name="locationReg">Location</string>
    <string name="client_radio_Reg">Client</string>
    <string name="handyman_radio_Reg">Handyman</string>
    <string name="register_as">Register as</string>
    <string name="sign_upReg">Sign-up</string>
    <string name="sign_upTitle_juu">Sign-Up</string>
    <string name="genderReg">Gender</string>
    <string name="hireUser">Hire</string>
    <string name="mianzini">Mianzini</string>
    <string name="john_kazi">John Kazi</string>
    <string name="first_nameitem">First Name</string>
    <string name="genderitem">Gender</string>
    <string name="handyman_typeitem">Handyman Type</string>
    <string name="locationitem">Location</string>
    <string name="registration_typeitem">Registration Type</string>
    <string name="second_nameitem">Second Name</string>
    <string name="locationUser">Location</string>
    <string name="user_nameUser">User Name</string>
    <string name="todoUser">TODO</string>
    <string name="tab_layout">Menu</string>
    <string name="shoemaker">Shoemaker</string>
    <string name="plumber">Plumber</string>
    <string name="painter">Painter</string>
    <string name="tailor">Tailor</string>
    <string name="locksmith">Locksmith</string>
    <string name="carpenter">Carpenter</string>
    <string name="account">Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="phone_numberReg">Phone number</string>
    <string name="my_account">My Account</string>
    <string name="logout">Logout</string>
    <string name="dashboard_Nav">Dashboard</string>
    <string name="logout_Nav">Logout</string>
    <string name="profile_Nav">Profile</string>
    <string name="your_nameNav">Your Name</string>
    <string name="your_emailNav">your.email@example.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="callBtn">Call</string>
    <string name="feedback">Write your feedback</string>
    <string name="submitFeedback">Submit</string>
    <string name="emailAccount">Email</string>
    <string name="namesAccount">Names</string>
    <string name="delete_account">Delete Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="emailAccou">Email</string>
    <string name="full_nameAccou">Full Name</string>
    <string name="passwordAccou">Password</string>
    <string name="delete_accou">Delete Account</string>
    <string name="new_passwordAccou">New Password</string>
    <string name="reset_passwordAccou">Reset Password</string>
    <string name="specify_your_skills">Specify your skills</string>
    <string name="skills">Skills: N/A</string>
    <string name="hires_count">Hires: 0</string>

</resources>