<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todoUser"
        android:src="@drawable/profile"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_nameUser"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/userLocationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationUser"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/userSkillsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skills"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/userHireCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hires_count"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callBtn"
        android:layout_gravity="center_vertical" />
</LinearLayout>
