<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/accountNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_nameAccou"
        android:textSize="18sp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/accountEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailAccou"
        android:textSize="18sp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_passwordAccou"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_passwordAccou"
        android:padding="8dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_accou"
        android:padding="8dp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
