<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <!--password-->

    <TextView
        android:id="@+id/textView8"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="151dp"
        android:layout_height="38dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="LOGIN"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"
        tools:ignore="HardcodedText,TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/textView9"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="154dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/loginwords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/emaillogin"
        android:layout_width="367dp"
        android:layout_height="65dp"
        android:autofillHints="no"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#78909C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.127"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/passwordlogin"
        android:layout_width="366dp"
        android:layout_height="68dp"
        android:hint="@string/prompt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#00838F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453"
        tools:ignore="TextContrastCheck,UnknownId" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:minWidth="48dp"
        android:text="@string/loginBt"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/noacc"
        android:layout_width="251dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/no_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

</androidx.constraintlayout.widget.ConstraintLayout>