<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintDimensionRatio=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Home"
            app:titleTextColor="@android:color/white"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="359dp"
            android:layout_height="89dp"
            android:lines="@integer/material_motion_duration_long_1"
            android:text="@string/kichwa"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/rangi"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.122"
            tools:ignore="TextSizeCheck,TextContrastCheck,VisualLintOverlap" />

        <ImageView
        android:id="@+id/carpent"
        android:layout_width="192dp"
        android:layout_height="174dp"
        android:src="@drawable/carpenter2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276"
        tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewCarpent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carpenter"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.243"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.444"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/plumb"
            android:layout_width="191dp"
            android:layout_height="206dp"
            android:src="@drawable/plumber2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.854"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.262"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewPlumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plumber"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.764"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.429"
            tools:ignore="TextContrastCheck" />

        <ImageView
        android:id="@+id/tail"
        android:layout_width="185dp"
        android:layout_height="156dp"
        android:src="@drawable/tailor2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"
        tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/textViewTail"
            android:layout_width="61dp"
            android:layout_height="23dp"
            android:text="@string/tailor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.699"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <ImageView
            android:id="@+id/shoemake"
            android:layout_width="181dp"
            android:layout_height="159dp"
            android:src="@drawable/shoe2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.856"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.616"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewShoemake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoemaker"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.79"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.699"
            tools:ignore="VisualLintOverlap" />

        <ImageView
            android:id="@+id/lock"
            android:layout_width="185dp"
            android:layout_height="178dp"
            android:src="@drawable/key2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.927"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/textViewLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locksmith"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.932"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/painter"
            android:layout_width="181dp"
            android:layout_height="180dp"
            android:src="@drawable/housepainter2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.86"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.931"
            tools:ignore="ContentDescription,DuplicateIds" />

        <TextView
            android:id="@+id/textViewPainter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/painter"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.742"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.932" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_main"
        app:headerLayout="@layout/nav_header"
        tools:ignore="VisualLintBounds" />

</androidx.drawerlayout.widget.DrawerLayout>